# Prediction-of-Product-Sales

./: .gitignore  CONTRIBUTING.md  Data_Cleaning_&_Exploration(Project).ipynb  Makefile  Prediction_of_Product_Sales.ipynb  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
notebooks/: 01_eda.ipynb  02_modeling.ipynb
pytest-cache-files-gj8cnhr5/v/cache/: nodeids
reports/: linear_coefficients.csv  model_metrics.csv  project_summary.json  rf_feature_importance.csv
src/: __init__.py  cli.py  config.py  data_loader.py  evaluation.py  logging_config.py  modeling.py  notebook_builder.py  preprocessing.py  project_pipeline.py  visualization.py
src/sales_prediction/: __init__.py  cleaning.py  config.py  data.py  eda.py  features.py  preprocessing.py
tests/: conftest.py  test_data_loader.py  test_evaluation.py  test_modeling.py  test_preprocessing.py
tools/: build_notebook.py
