[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-sales-prediction"
version = "1.0.0"
description = "End-to-end ML project predicting item-level outlet sales for a retail chain."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Belal Asem" }]
keywords = ["machine-learning", "regression", "retail", "scikit-learn", "data-science"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.26,<3.0",
    "pandas>=2.2,<3.0",
    "scikit-learn>=1.5,<2.0",
    "matplotlib>=3.9,<4.0",
    "seaborn>=0.13,<1.0",
    "joblib>=1.4",
    "gdown>=5.2",
]

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.1",
    "jupyterlab>=4.2",
    "nbformat>=5.10",
    "nbclient>=0.10",
    "ipykernel>=6.29",
]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "black>=24.8",
]

[project.scripts]
retail-sales-pipeline = "src.cli:main"

[project.urls]
Repository = "https://github.com/ashrafsohail42003/Prediction-of-Product-Sales"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ---------- Tooling ----------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --strict-config"
filterwarnings = [
    "ignore::DeprecationWarning:sklearn.*",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks", "data", "models", "reports"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "C4"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
exclude = '''
/(
    \.git
  | \.venv
  | notebooks
  | data
  | models
  | reports
)/
'''

[tool.coverage.run]
source = ["src"]
omit = ["src/notebook_builder.py", "src/cli.py"]
